tests/paczka1/fuzzy1/83066517.err
Error in line 1: ho6zQW A847 70,0
Error in line 10: ho6zQW A812 63,9
Error in line 11: 0Ag8N7JLMou A973 56,6
Error in line 12: ho6zQW S106 97,0
Error in line 18: ho6zQW A847 4,5
Error in line 39: xBjZb2DUj A847 93,69
